Updated href for contact

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <nav class="flex flex-wrap gap-2 items-center text-xs md:text-sm">
           <a class="nes-btn is-success" href="#projects">Projects</a>
-          <a class="nes-btn is-warning" href="/contact">Contact</a>
+          <a class="nes-btn is-warning" href="/contact.html">Contact</a>
           <a class="nes-btn is-error" href="https://github.com/harsh-0409"><i class="nes-icon github"></i></a>
         </nav>
       </header>
