--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="max-w-5xl mx-auto px-6 py-12">
       <header class="mb-10 flex flex-col gap-4 md:flex-row md:items-center md:justify-between">
         <h1 class="text-2xl md:text-3xl font-normal">
-          <a href="/">4loyak!</a>
+          <a href="/">Harsh!</a>
         </h1>
         <div class="flex items-center gap-3">
           <p class="text-xs md:text-sm text-ink/70">Dark:</p>
